@@ -1,2 +1,2 @@
 version=3
-http://bluewater.sidux.com/outgoing/sidux-manual-([\.0-9]+)\.tar\.gz
+http://bluewater.aptosid.com/outgoing/aptosid-manual-([\.0-9]+)\.tar\.gz
