@@ -6,8 +6,10 @@ sidux-manual (02.07.2010.06.13.1-2) UNRELEASED; urgency=low
     with the current menu structure of sidux-manual.
   * switch to compat level 8.
   * add debian/bootstrap.sh, to ease language additions/ removals.
+  * fill in LL_LOCAL_LANGUAGE.
+  * switch debian/watch to aptosid.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 30 Aug 2010 02:06:27 +0200
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 30 Aug 2010 02:35:09 +0200
 
 sidux-manual (02.07.2010.06.13.1-1) unstable; urgency=low
 
